objects/Liked_Item__c.object
<CustomObject>
    <description>Created on 6-Dec-13 Veeresh Alur</description>
    <fields>
        <fullName>Item_Identifier__c</fullName>
        <label>Item Identifier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Count__c</fullName>
        <label>Like Count</label>
        <summaryForeignKey>User_Liked_Item__c.Liked_Item_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Liked Item</label>
    <nameField>
        <label>Liked Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liked Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>